service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datetime-service
spec:
  type: LoadBalancer   # Use NodePort if on minikube/play-with-k8s
  selector:
    app: datetime
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
